--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ footer{
     background-image: linear-gradient(to right, cornflowerblue, rgb(135, 234, 135),
     rgb(241, 147, 110),hsl(60, 92%, 76%));
        color: #fff;
-   padding: 30px;
+   padding: 30px 30px;
 }
 figure {
     display: block;
